# portal-service

./: .gitmodules  Cargo.toml  README.md  build.sh  database.Dockerfile  docker-compose.yml  service.Dockerfile
res/: init_database.sql  pg_hba.conf  postgresql.conf
src/: main.rs
src/core/: mod.rs
src/core/api/: mod.rs
src/core/api/route/: mod.rs
src/core/database/: mod.rs
