[package]
name = "portal-service"
version = "0.1.0"
edition = "2021"
authors = ["Lahcène Belhadi <lahcene.belhadi@gmail.com>"]

[dependencies.dbzlib-rs]
path = "dbzlib-rs"

# HTTP
# https://crates.io/crates/actix-web
[dependencies.actix-web]
version = "4.3"

# SQL
# https://crates.io/crates/sqlx
[dependencies.sqlx]
version = "0.6.3"

# Serde
# https://crates.io/crates/serde
[dependencies.serde]
version = "1.0"

# Tokio
# https://crates.io/crates/tokio
[dependencies.tokio]
version = "1.29"
