[package]
name = "portal-service"
version = "0.1.2"
edition = "2021"
authors = ["Lahcène Belhadi <lahcene.belhadi@gmail.com>"]

# Logging
# https://crates.io/crates/log
# Note: Works with env_logger
[dependencies.log]
version = "0.4.20"

# Logging
# https://crates.io/crates/env_logger
[dependencies.env_logger]
version = "0.10.0"

[dependencies.dbzlib-rs]
path = "dbzlib-rs"

# HTTP
# https://crates.io/crates/actix-web
[dependencies.actix-web]
version = "4.3"

# SQL
# https://crates.io/crates/sqlx
[dependencies.sqlx]
version = "0.6.3"

# Serde
# https://crates.io/crates/serde
[dependencies.serde]
version = "1.0"

# Tokio
# https://crates.io/crates/tokio
[dependencies.tokio]
version = "1.29"
